# crccheck-rs

./: Cargo.toml
.cargo/: config
.github/workflows/: ci.yml
src/: lib.rs  main.rs
