[package]
name = "crccheck"
version = "0.1.0"
authors = ["Dominik Nakamura <dnaka91@gmail.com>"]
edition = "2018"
description = "Simple CLI tool to check CRC values in file names"
documentation = "https://docs.rs/crccheck"
homepage = "https://github.com/dnaka91/crccheck-rs"
repository = "https://github.com/dnaka91/crccheck-rs"
readme = "README.md"
keywords = ["cli", "crc", "utility"]
categories = ["command-line-utilities"]
license = "MIT OR Apache-2.0"

[dependencies]
anyhow = "1.0.26"
colored = "1.9.2"
crc32fast = "1.2.0"
structopt = "0.3.9"

[dependencies.futures]
version = "0.3.4"
default-features = false
features = ["std"]

[dependencies.tokio]
version = "0.2.11"
features = ["fs", "io-util", "macros", "rt-threaded", "stream"]

[profile.release]
lto = true
panic = "abort"
