[package]
name = "crccheck"
version = "0.1.0"
authors = ["Dominik Nakamura <dnaka91@gmail.com>"]
edition = "2018"
description = "Simple CLI tool to check CRC values in file names"
documentation = "https://docs.rs/crccheck"
homepage = "https://github.com/dnaka91/crccheck-rs"
repository = "https://github.com/dnaka91/crccheck-rs"
readme = "README.md"
keywords = ["cli", "crc", "utility"]
categories = ["command-line-utilities"]
license = "MIT OR Apache-2.0"
exclude = [".github", ".gitignore"]

[dependencies]
anyhow = "1.0.37"
async-stream = "0.3.0"
clap = "3.0.0-beta.2"
colored = "2.0.0"
crc32fast = "1.2.1"
num_cpus = "1.13.0"

[dependencies.futures-util]
version = "0.3.9"
default-features = false
features = ["std"]

[dependencies.tokio]
version = "1.0.1"
features = ["fs", "io-util", "macros", "rt"]

[profile.release]
lto = true
panic = "abort"
